--- a/thymeleaf-test/src/main/resources/templates/test.html
+++ b/thymeleaf-test/src/main/resources/templates/test.html
@@ -7,7 +7,49 @@
 </head>
 <body>
 
-<p th:text="${variable}">Sample text</p>
+<!--<p th:text="${variable}">Sample text</p>-->
+
+<!--<p th:utext="${variable}">Sample text</p>-->
+
+<!--<tr th:each="item : ${items}">-->
+<!--    <td th:text="${item}">Item</td>-->
+<!--</tr>-->
+
+<!--<div th:if="${condition}">If</div>-->
+<!--<div th:unless="${condition}">Unless</div>-->
+
+<!--<li th:each="item : ${items}">-->
+<!--    <a th:attr="href=@{/{id}(id=${item[id})}">View Item</a>-->
+<!--</li>-->
+
+<!--<a th:href="@{/path}">Link</a>-->
+
+<!--<img th:src="@{/images/thymeleaf-icon.jpg}" />-->
+
+<!--<div th:classappend="${condition} ? 'active' : 'inactive'">Content</div>-->
+
+<!--<div th:style="'color:' + ${color}">Content</div>-->
+
+<!--<div th:replace="fragments/header :: headerFragment"></div>-->
+
+<!--<div th:include="fragments/footer :: footerFragment"></div>-->
+
+<!--<form th:object="${userDto}" th:action="@{/}" method="post">-->
+<!--    <input type="text" th:field="*{name}" />-->
+<!--</form>-->
+
+<!--<p th:text="#{message.key}">Default text</p>-->
+
+<!--<p th:text="${#dates.format(date, 'yyyy-MM-dd')}">Date</p>-->
+<!--<p th:text="${#numbers.formatDecimal(number, 1, 2)}">Number</p>-->
+
+<!--<p>Welcome, [[${user.name}]]!</p>-->
+
+<!--<p th:utext="|<b>${user.name}</b>|"></p>-->
+
+<!--<div th:fragment="headerFragment">-->
+<!--  <h1>Header</h1>-->
+<!--</div>-->
 
 </body>
 </html>
