--- a/test/src/main/resources/templates/books.html
+++ b/test/src/main/resources/templates/books.html
@@ -3,7 +3,7 @@
 <head>
     <title>Books List</title>
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
-    <script th:src="@{/js/book-ajax.js}"></script>
+    <script th:src="@{/js/books-ajax.js}"></script>
 </head>
 <body>
 <h1>Books List</h1>
